# ArteFly

FlightBookingApp/: settings.gradle.kts
FlightBookingApp/app/: build.gradle.kts
FlightBookingApp/app/src/main/: AndroidManifest.xml
FlightBookingApp/app/src/main/java/com/example/flightbookingapp/: ApiClient.java  ApiService.java  Flight.java  FlightAdapter.java  FlightResponse.java  FlightResultsActivity.java  MainActivity.java
FlightBookingApp/app/src/main/res/layout/: activity_flight_results.xml  activity_main.xml  item_flight.xml
FlightBookingApp/app/src/main/res/values/: themes.xml
FlightBookingApp/gradle/wrapper/: gradle-wrapper.properties
FlightBookingServer/: CMakeLists.txt
FlightBookingServer/include/: airports.h  db.h  serpapi.h
FlightBookingServer/src/: db.cpp  main.cpp  serpapi.cpp
